--- a/package.json
+++ b/package.json
@@ -1,17 +1,34 @@
 {
-  "name": "react-websockets-player",
-  "private": true,
-  "version": "0.0.0",
+  "name": "react-websockets-video-player",
+  "private": false,
+  "version": "0.0.1",
   "type": "module",
+  "main": "dist/index.umd.s",
+  "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.es.js",
+      "require": "./dist/index.umd.js"
+    }
+  },
+  "files": [
+    "/dist"
+  ],
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prepare": "yarn build"
   },
   "dependencies": {
+    "path": "^0.12.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "vite-plugin-dts": "^3.6.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
