--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,7 @@
   "compilerOptions": {
     "target": "ESNext",
     "useDefineForClassFields": true,
-    "lib": [
-      "DOM",
-      "DOM.Iterable",
-      "ESNext"
-    ],
+    "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "allowJs": false,
     "skipLibCheck": true,
     "esModuleInterop": false,
@@ -18,17 +14,11 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "declaration": true,
-    "typeRoots": [
-      "./dist/index.d.ts",
-      "node_modules/@types"
-    ],
+    "typeRoots": ["./dist/index.d.ts", "node_modules/@types"],
     "noEmit": true,
     "jsx": "react-jsx"
   },
-  "include": [
-    "src",
-    "./index.ts"
-  ],
+  "include": ["src", "./index.ts"],
   "references": [
     {
       "path": "./tsconfig.node.json"
