--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-websockets-video-player",
   "private": false,
-  "version": "0.0.1",
+  "version": "0.0.10",
   "type": "module",
   "main": "dist/index.umd.s",
   "types": "dist/index.d.ts",
@@ -35,13 +35,17 @@
       "prettier --write"
     ]
   },
-  "dependencies": {
+  "peerDependencies": {
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "vite-plugin-dts": "^3.6.3"
   },
   "devDependencies": {
+    "path": "^0.12.7",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "vite-plugin-dts": "^3.6.3",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
