ft(document): add documentation

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint src --ext js,jsx,ts,tsx --report-unused-disable-directives --max-warnings 10",
     "lint:fix": "eslint --fix .",
     "format": "prettier --write .",
     "precommit": "lint-staged",
