--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "react-websockets-video-player",
   "private": false,
-  "version": "0.0.12",
+  "version": "0.0.14",
   "type": "module",
-  "main": "dist/index.umd.s",
+  "main": "dist/index.umd.js",
+  "module": "dist/index.es.js",
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
@@ -59,5 +60,6 @@
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
     "vite-plugin-dts": "^3.6.3"
-  }
+  },
+  "dependencies": {}
 }
