--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,11 @@
   "compilerOptions": {
     "target": "ESNext",
     "useDefineForClassFields": true,
-    "lib": ["DOM", "DOM.Iterable", "ESNext"],
+    "lib": [
+      "DOM",
+      "DOM.Iterable",
+      "ESNext"
+    ],
     "allowJs": false,
     "skipLibCheck": true,
     "esModuleInterop": false,
@@ -14,11 +18,17 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "declaration": true,
-    "typeRoots": ["./dist/index.d.ts", "node_modules/@types"],
+    "typeRoots": [
+      "./dist/index.d.ts",
+      "node_modules/@types"
+    ],
     "noEmit": true,
     "jsx": "react-jsx"
   },
-  "include": ["src", "./index.ts"],
+  "include": [
+    "src",
+    "./index.ts"
+  ],
   "references": [
     {
       "path": "./tsconfig.node.json"
