--- a/package.json
+++ b/package.json
@@ -1,7 +1,16 @@
 {
   "name": "react-websockets-video-player",
+  "author": {
+    "name": "AMANI Eric"
+  },
+  "keywords": [
+    "react",
+    "websockets",
+    "video",
+    "video player"
+  ],
   "private": false,
-  "version": "0.0.14",
+  "version": "0.0.15",
   "type": "module",
   "main": "dist/index.umd.js",
   "module": "dist/index.es.js",
